<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">COMP2000_CW1</string>
    <string name="employee_login">Employee Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="admin_login">Admin Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="main_hub">Main Hub</string>
    <string name="employee_picture">EmployeePicture</string>
    <string name="chris_bratosin">Chris Bratosin</string>
    <string name="my_details_2">My Details</string>
    <string name="holidays">Holidays</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="employee_details">My Details</string>
    <string name="employee_name">Chris Bratosin</string>
    <string name="employee_fname">Chris</string>
    <string name="employee_sname">Bratosin</string>
    <string name="employee_email">Chris.bratosin@bkr.com</string>
    <string name="employee_phonenumber">07894 298571</string>
    <string name="employee_payroll">Payroll : 241204</string>
    <string name="employee_address">19 Fusion Close</string>
    <string name="employee_city">Plymouth</string>
    <string name="employee_county">Devon</string>
    <string name="employee_postcode">PL6 1KU</string>
    <string name="edit_details_btn">Edit Details</string>
    <string name="edit_details_main_hub_btn">Main Hub</string>
    <string name="page_name">PageName</string>
    <string name="employee_manage_holidays">Manage Holidays</string>
    <string name="employee_request_holiday">Request Holiday</string>
    <string name="employee_manage_holiday_btn">Manage Holidays</string>
    <string name="employee_manage_holiday_return">Main Hub</string>
    <string name="employee_main_name">Chris Bratosin</string>
    <string name="deletebtn_1">deletebtn!</string>
    <string name="deletebtn_2">deletebtn2</string>
    <string name="deletebtn_3">deletebtn3</string>
    <string name="deletebtn_4">deletebtn4</string>
    <string name="deletebtn_5">deletebtn5</string>
    <string name="deletebtn_6">deletebtn6</string>
    <string name="deletebtn_7">deletebtn7</string>
    <string name="deletebtn_8">deletebtn8</string>
    <string name="deletebtn_9">deletebtn9</string>
    <string name="employee_request_holiday_page">Request Holidays</string>
    <string name="employee_holidays">Holidays</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="holiday_leave_type">Holiday Leave Type</string>
    <string name="requestholidayimage">requestholidayimage</string>
    <string name="manageholidaysimage">manageholidaysimage</string>
    <string name="holidaysphoto">holidaysphoto</string>
    <string name="mydetailsimage">mydetailsImage</string>
    <string name="employee_view_updates">View Updates</string>
    <string name="employee_submit_changes">Submit Changes</string>
    <string name="employee_edit_holiday_details">Edit Holiday Detials</string>
    <string name="employee_select_holiday">Select Holiday</string>
    <string name="manageholoidaypageimage">manageholoidaypageimage</string>
    <string name="view_updates">View Updates</string>
    <string name="view_updates_1">You have been assigned to work 19/11/2024 @ 09:00 – 17:30</string>
    <string name="view_updates_2">You have received your annual 5% salary increase. Well Done !</string>
    <string name="view_updates_3">Holiday 15/11/2024 – 17/11/2024 has been approved by Jamie Dimon !</string>
    <string name="my_details_image">my_details_image</string>
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="forgotpassword_info">Please enter your email address to receive password reset link</string>
    <string name="enter_email_address_forgot">Enter Email Address</string>
    <string name="send_password_email">Send Email</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_has_been_successfully_reset">Password has been successfully reset</string>
    <string name="adminLogin">Admin Login</string>
    <string name="admin_username">Admin Username</string>
    <string name="admin_passwordhint">Admin Password</string>
    <string name="hide_password_img">hide_password</string>
    <string name="admin_name">Jamie Dimon</string>
    <string name="admin_holiday_requests">Holiday Requests</string>
    <string name="admin_delete_employee_profile">Delete Employee Profile</string>
    <string name="admin_create_employee_profile">Create Employee Profile</string>
    <string name="admin_view_existing_employees">View Existing Employees</string>
    <string name="settings_button">Settings</string>
    <string name="logout_button">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adminD_editDbtn">Edit Details</string>
    <string name="adminD_mainhubBtn">Main Hub</string>
    <string name="adminD_profilepicture">adminD_profilepicture</string>
    <string name="adminED_title">Edit Details</string>
    <string name="a_Password">Password</string>
    <string name="a_Username">Username</string>
    <string name="name_edit">name_edit</string>
    <string name="surname_edit">surname_edit</string>
    <string name="email_edit">email_edit</string>
    <string name="number_edit">number_edit</string>
    <string name="address_edit">address_edit</string>
    <string name="city_edit">city_edit</string>
    <string name="postcode_edit">postcode_edit</string>
    <string name="county_edit">county_edit</string>
    <string name="eidt_image">eidt_image</string>
    <string name="edit_mainhub">Main Hub</string>
    <string name="editdetail_btn">Edit Details</string>
    <string name="admin_HolidayRequest">Holiday Requests</string>
    <string name="admin_HolidayRequest1">Chris Bratosin</string>
    <string name="admin_HolidayReason1">I am requesting a holiday for 15/11/2024 – 17/11/2024 to attend my family wedding.</string>
    <string name="admin_AcceptButton1">Accept</string>
    <string name="admin_DeclineButton1">Decline</string>
    <string name="admin_HolidayRequest2">Justin Chan</string>
    <string name="admin_HolidayReason2">I am requesting a holiday for 25/10/2024 – 01/11/2024 to go on a holiday with my children.</string>
    <string name="admin_AcceptButton2">Accept</string>
    <string name="admin_DeclineButton2">Decline</string>
    <string name="admin_HolidayRequest3">Charles Hopes</string>
    <string name="admin_HolidayReason3">I am requesting a holiday for 22/11/2024 – 24/11/2024 to go and get knee replacement surgery.</string>
    <string name="admin_AcceptButton3">Accept</string>
    <string name="admin_DeclineButton3">Decline</string>
    <string name="adminHolReq_ReturnMainHub">Main Hub</string>
    <string name="admin_declineDescription1">Decline for reuqest 1</string>
    <string name="admin_declineDescription2">Decline for request 2</string>
    <string name="admin_acceptDescription1">Accept for reqeust 1</string>
    <string name="admin_acceptDescription2">Accept for request 2</string>
    <string name="employee_salary">£2500\n</string>
    <string name="employee_id">241224\n</string>
    <string name="employee_department">Finance\n</string>
    <string name="employee_annualleaves">Annual Leaves: 30</string>
    <string name="employee_joindate">Joined : 24/10/2024\n</string>
    <string name="adminDetails_name">Jamie</string>
    <string name="adminDetails_email">Jamie.dimon@bkr.com</string>
    <string name="adminDetails_surname">Dimon</string>
    <string name="adminDetails_ID">Admin ID: 2486</string>
    <string name="adminDetails_Department">Administrator</string>
    <string name="adminDetails_Salary">£5750</string>
    <string name="adminDetails_Leaves">Annual Leaves: 30</string>
    <string name="adminDetails_dateJoined">Date Joined: 20/08/2018</string>
    <string name="createEmployee_Title">Create Employee Profile</string>
    <string name="createEmployee_Image">defaultImage</string>
    <string name="createEmployee_Forename">Forename</string>
    <string name="createEmployee_Email">Email Address</string>
    <string name="createEmployee_Surname">Surname</string>
    <string name="createEmployee_joinDate">Join Date (DD/MM/YYYY)</string>
    <string name="createEmployee_ID">ID</string>
    <string name="createEmployee_Department">Department</string>
    <string name="createEmployee_Salary">Salary</string>
    <string name="createEmployee_AnnualLeaves">Annual Leaves:</string>
    <string name="createEmployee_MainHubBtn">Main Hub</string>
    <string name="createEmployee_ConfirmBtn">Confirm</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>