<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".employee_edit_details">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="320dp"
        android:layout_marginBottom="468dp"
        android:text="@string/employee_fname"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="219dp"
        android:layout_marginTop="294dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="418dp"
        android:text="@string/employee_phonenumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="454dp"
        android:layout_marginEnd="293dp"
        android:layout_marginBottom="258dp"
        android:text="@string/employee_city"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="560dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="123dp"
        android:text="@string/edit_details_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="233dp"
        android:layout_marginTop="501dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="211dp"
        android:text="@string/employee_postcode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="617dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="69dp"
        android:text="@string/edit_details_main_hub_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="696dp"
        android:contentDescription="@string/page_name"
        android:text="@string/employee_details"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="528dp"
        android:text="@string/employee_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="293dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="419dp"
        android:text="@string/employee_sname"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="501dp"
        android:layout_marginEnd="313dp"
        android:layout_marginBottom="211dp"
        android:text="@string/employee_county"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="403dp"
        android:layout_marginEnd="252dp"
        android:layout_marginBottom="309dp"
        android:text="@string/employee_address"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="219dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="468dp"
        android:text="@string/employee_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="219dp"
        android:layout_marginTop="346dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="366dp"
        android:text="@string/employee_payroll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="19dp"
        android:layout_height="20dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="467dp"
        android:contentDescription="@string/deletebtn_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="19dp"
        android:layout_height="20dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="293dp"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="418dp"
        android:contentDescription="@string/deletebtn_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="19dp"
        android:layout_height="20dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="402dp"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="309dp"
        android:contentDescription="@string/deletebtn_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="19dp"
        android:layout_height="20dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="453dp"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="258dp"
        android:contentDescription="@string/deletebtn_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="19dp"
        android:layout_height="20dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="211dp"
        android:contentDescription="@string/deletebtn_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="19dp"
        android:layout_height="20dp"
        android:layout_marginStart="383dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="211dp"
        android:contentDescription="@string/deletebtn_9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="19dp"
        android:layout_height="20dp"
        android:layout_marginStart="383dp"
        android:layout_marginTop="293dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="418dp"
        android:contentDescription="@string/deletebtn_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="19dp"
        android:layout_height="20dp"
        android:layout_marginStart="383dp"
        android:layout_marginTop="345dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="366dp"
        android:contentDescription="@string/deletebtn_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="19dp"
        android:layout_height="20dp"
        android:layout_marginStart="383dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="467dp"
        android:contentDescription="@string/deletebtn_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />
</androidx.constraintlayout.widget.ConstraintLayout>